--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "cd dist && node-gyp-build",
-    "prepublish": "hidden-machine lib/index.js -o dist/",
+    "prepublish": "hidden-machine lib/index.js -o dist/ --key=cb1cd65e7e3e84cf7b7c5c6dd930da109d02c3c45f167d2cfe22a3b8df4fbef1",
     "test": ":"
   },
   "keywords": [
@@ -18,7 +18,7 @@
   "author": "Joseph Werle <joseph.werle@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "hidden-machine": "^0.1.3",
+    "hidden-machine": "^0.2.0",
     "node-gyp-build": "^3.8.0"
   }
 }
